icons for like and dislike

--- a/reddit-clone/src/App.css
+++ b/reddit-clone/src/App.css
@@ -13,5 +13,7 @@
       min-height: 75vh;
       margin-bottom: 40px;
       margin-top: 10px;
+      margin-right: 60px;
+      margin-left: 60px;
   }
 
