--- a/reddit-clone/src/components/AppBar/AppBar.css
+++ b/reddit-clone/src/components/AppBar/AppBar.css
@@ -1,5 +1,5 @@
 .appBar {
-    background-color: dodgerblue !important;
+    background-color: #576490 !important;
     margin-top: -15px;
     position: fixed;
     padding-top: 15px;
